# bigdata-recsys

./: README.md  pyproject.toml  requirements.txt
data/: Bewertungsmatrix_Bibliona.csv  Itemprofile_Bibliona.csv  Ratings_Bibliona.csv  Testdaten_Bibliona.csv
notebooks/: bibliona_recsys.ipynb
