[project]
name = "big-data-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "implicit>=0.7.2",
    "ipykernel>=6.29.5",
    "lightgbm>=4.6.0",
    "numpy==1.26.4",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "scikit-learn==1.7.0",
    "scikit-surprise==1.1.4",
    "scipy>=1.15.3",
    "sentence-transformers>=4.1.0",
]
